# ELF2-RK3588-workshopenv

./: readme.md  嵌入式大赛报告.docx
action/: pose_detect_single.py  pose_infer_app.py  predict_pose.py  train_pose_classifier.py
action/rknn_yolov8_pose_demo/: rknn_yolov8_pose_demo
action/rknn_yolov8_pose_demo/model/: pose_classifier.pkl  scaler.pkl
action/yolov8_pose/cpp/: main.cc  postprocess.cc  postprocess.h
action/yolov8_pose/python/: yolov8n-pose.data  yolov8n-pose.quantization.cfg
app/: facedialog.cpp  facedialog.h  main.cpp  ui_init.cpp  ui_init.h  widget.cpp  widget.h
driver/bh1750/: Makefile  bh1750.c
driver/dht11/: Makefile  dht11.c
driver/led/: Makefile  myled.c
face/: face_recognize.py  face_register.py
onenet/: CMakeLists.txt  README.md
onenet/common/: common.h  data_check.c  log.c  log.h  utils.h
onenet/examples/things_model/: README.md  main.c  tm_user.c  tm_user.h
onenet/onenet/protocols/mqtt/paho-mqtt/: mqtt_client.c  mqtt_client.h
onenet/onenet/security/tls/: tls.c
onenet/onenet/tm/: dev_discov.c  tm_api.c  tm_api.h  tm_data.h  tm_mqtt.c  tm_mqtt.h  tm_onejson.c  tm_subdev.c  tm_subdev.h
onenet/onenet/utils/: dev_token.c  dev_token.h
